[GOJHW-3] grpc for main task + http for additional method
